--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>yan-chapetta-portfolio</title>
+    <meta
+      name="description"
+      content="Portfólio de Yan Chapetta — Desenvolvedor Front-End focado em React, TypeScript, animações e experiências digitais com alto impacto."
+    />
+    <meta property="og:title" content="Yan Chapetta · Desenvolvedor Front-End" />
+    <meta
+      property="og:description"
+      content="Projetos, habilidades e depoimentos que demonstram a jornada de Yan Chapetta construindo produtos digitais modernos."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yan-chapetta-portfolio.vercel.app/" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/94490282?v=4" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="theme-color" content="#0b1120" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Yan Chapetta · Desenvolvedor Front-End</title>
   </head>
   <body>
     <div id="root"></div>
