atualizando de frontend para backend

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfólio de Yan Chapetta — Desenvolvedor Front-End focado em React, TypeScript, animações e experiências digitais com alto impacto."
+      content="Portfólio de Yan Chapetta — Desenvolvedor Full Stack focado em React, TypeScript, animações e experiências digitais com alto impacto."
     />
-    <meta property="og:title" content="Yan Chapetta · Desenvolvedor Front-End" />
+    <meta property="og:title" content="Yan Chapetta · Desenvolvedor Full Stack" />
     <meta
       property="og:description"
       content="Projetos, habilidades e depoimentos que demonstram a jornada de Yan Chapetta construindo produtos digitais modernos."
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="theme-color" content="#0b1120" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Yan Chapetta · Desenvolvedor Front-End</title>
+    <title>Yan Chapetta · Desenvolvedor Full Stack</title>
   </head>
   <body>
     <div id="root"></div>
